Update git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,8 @@ build/
 
 ### Mac OS ###
 .DS_Store
+
+
+### Mac OS ###
+!**/src/main/resources/cookie_facebook/privateKey.rsa
+!**/src/main/resources/cookie_facebook/publicKey.rsa
